--- a/bnbnav-plugin/pom.xml
+++ b/bnbnav-plugin/pom.xml
@@ -33,5 +33,10 @@
             <version>3.11.09</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.2</version>
+        </dependency>
     </dependencies>
 </project>
