--- a/bnbnav-server/package.json
+++ b/bnbnav-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "jose": "^4.8.1",
     "sqlite3": "^5.0.2"
   }
 }
