--- a/bnbnav-server/package.json
+++ b/bnbnav-server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "jose": "^4.8.1",
