--- a/bnbnav-server/package.json
+++ b/bnbnav-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "jose": "^4.8.1",
