Use Git to form an audit log

--- a/bnbnav-server/package.json
+++ b/bnbnav-server/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-ws": "^4.0.0",
-    "jose": "^4.8.1",
-    "sqlite3": "^5.0.2"
+    "jose": "^4.11.2",
+    "simple-git": "^3.16.0",
+    "sqlite3": "^5.1.4"
   }
 }
