--- a/bnbnav-server/package.json
+++ b/bnbnav-server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-ws": "^4.0.0",
     "jose": "^4.11.2",
+    "node-git-server": "^1.0.0",
     "simple-git": "^3.16.0",
     "sqlite3": "^5.1.4"
   }
